<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutPopUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mariupol_bold"
        android:text="@string/enterTheKey"
        android:textAlignment="center"
        android:textColor="@color/universal_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/hintForTheUserAboutTheKey1"
        android:textAlignment="center"
        android:textColor="@color/universal_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="271dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/pop_up_edit_text"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hintForTheUserAboutTheKey3"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:textColor="@color/universal_black"
        android:shadowColor="@color/universal_black"
        android:textColorHint="@color/universal_stroke_grey_75"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:srcCompat="@drawable/pop_up_close" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/hintForTheUserAboutTheKey2"
        android:textAlignment="textStart"
        android:textColor="@color/universal_text_grey_75"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/numberOfCharacters"
        android:textAlignment="textStart"
        android:textColor="@color/universal_text_grey_75"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/pop_up_button_disabled"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/popUpButtonText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/trailingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageButton"
        app:layout_constraintEnd_toEndOf="@id/imageButton"
        app:layout_constraintStart_toStartOf="@id/imageButton"
        app:layout_constraintTop_toTopOf="@id/imageButton"
        app:srcCompat="@drawable/pop_up_trailing_icon" />

    <ImageView
        android:id="@+id/caret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageButton"
        app:layout_constraintEnd_toStartOf="@id/trailingIcon"
        app:layout_constraintTop_toTopOf="@id/imageButton"
        app:srcCompat="@drawable/pop_up_caret" />


</androidx.constraintlayout.widget.ConstraintLayout>