<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_theme_light_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chatToolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_theme_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:text=""
        android:fontFamily="@font/mariupol_bold"
        android:textColor="@color/universal_black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chatToolBar" />

    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:text=""
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/universal_black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

    <ImageButton
        android:id="@+id/chat_back_button"
        android:layout_width="17dp"
        android:layout_height="23dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:background="@color/transparent"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/contactName"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/chat_back_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/back_word"
        android:textColor="@color/primary_black"
        android:textSize="16dp"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/chat_back_button"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/background_for_msgs_box"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/light_theme_dark_background"
        app:layout_constraintTop_toTopOf="@id/sendButton"
        app:layout_constraintBottom_toBottomOf="@id/sendButton"/>
    <EditText
        android:id="@+id/messageBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/message_box_background"
        android:hint="@string/hint"
        android:inputType="text"
        android:paddingLeft="16dp"

        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/universal_black"
        android:textColorHint="@color/universal_stroke_grey_40"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:background="@drawable/send_button_background"
        android:src="@drawable/send_button_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/encryptButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="1dp"
        android:background="@drawable/encrypt_button_background"
        android:src="@drawable/encrypt_button_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/unique_key_is_ok"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/note_you_can_start_chatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready_note1"
            android:fontFamily="@font/mariupol_regular"
            android:textFontWeight="700"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/note_you_can_start_chatting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready_note2"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:lineHeight="21dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>
        <TextView
            android:id="@+id/note_you_can_start_chatting3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready_note3"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:lineHeight="21dp"
            android:gravity="center"
            android:layout_marginBottom="12dp"/>


    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_chat_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/messageBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatToolBar"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>