<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/light_theme_light_background"
tools:context=".activity.MainActivity">


<LinearLayout
    android:id="@+id/welcome_screen_heading"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/light_theme_dark_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="10"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/chats_empty_top_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/chats_empty_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="9"
        android:fontFamily="@font/mariupol_regular"
        android:text="@string/settings_heading"
        android:textColor="@color/universal_black"
        android:textFontWeight="700"
        android:textSize="20sp" />
</LinearLayout>

    <ImageView
        android:id="@+id/light_theme_icon"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_light_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/light_theme_on_off"
        app:layout_constraintTop_toTopOf="@id/light_theme_on_off"
        app:layout_constraintBottom_toBottomOf="@id/light_theme_on_off"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/light_theme_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textFontWeight="500"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:paddingStart="10dp"
        android:text="@string/light_theme_on_off"
        android:textColor="@color/universal_black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/light_theme_icon"
        app:layout_constraintTop_toBottomOf="@id/welcome_screen_heading"
        app:layout_constraintBottom_toTopOf="@id/settings_list_divider1"
        />

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="false"
        android:checked="true"
        android:thumb="@drawable/switch_layer_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/light_theme_on_off"
        app:layout_constraintBottom_toBottomOf="@id/light_theme_on_off"
        android:track="@drawable/switch_background"
        android:layout_marginEnd="25dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/settings_list_divider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/chat_list_divider"
        app:layout_constraintTop_toBottomOf="@id/light_theme_on_off"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/auto_delete_chats_icon"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_auto_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/auto_delete_chats_text"
        app:layout_constraintTop_toTopOf="@id/auto_delete_chats_text"
        app:layout_constraintBottom_toBottomOf="@id/auto_delete_chats_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/auto_delete_chats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textFontWeight="500"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/auto_deleting_of_chats"
        android:textColor="@color/universal_black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/auto_delete_chats_icon"
        app:layout_constraintTop_toBottomOf="@id/settings_list_divider1"
        app:layout_constraintBottom_toTopOf="@id/settings_list_divider2"
        />

    <ImageView
        android:id="@+id/further_settings_icon1"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/further_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/auto_delete_chats_text"
        app:layout_constraintBottom_toBottomOf="@id/auto_delete_chats_text"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/settings_list_divider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/chat_list_divider"
        app:layout_constraintTop_toBottomOf="@id/auto_delete_chats_text"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/delete_all_chats_icon"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/icon_delete_forever"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_all_chats_text"
        app:layout_constraintTop_toTopOf="@id/delete_all_chats_text"
        app:layout_constraintBottom_toBottomOf="@id/delete_all_chats_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/delete_all_chats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textFontWeight="500"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/delete_all_chats"
        android:textColor="@color/universal_black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/delete_all_chats_icon"
        app:layout_constraintTop_toBottomOf="@id/settings_list_divider2"
        app:layout_constraintBottom_toTopOf="@id/settings_list_divider3"
        />

    <ImageView
        android:id="@+id/further_settings_icon2"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/further_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_all_chats_text"
        app:layout_constraintBottom_toBottomOf="@id/delete_all_chats_text"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/settings_list_divider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/chat_list_divider"
        app:layout_constraintTop_toBottomOf="@id/delete_all_chats_text"
        tools:ignore="MissingConstraints" />

<ImageView
    android:id="@+id/left_button_background"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/light_theme_dark_background"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintWidth_percent="0.5"
    app:layout_constraintHorizontal_bias="0"
    />

<ImageView
    android:id="@+id/right_button_background"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="@color/light_theme_dark_background"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintWidth_percent="0.5"
    app:layout_constraintHorizontal_bias="1" />

<TextView
    android:id="@+id/bottom_button_chats"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/chat_list"
    android:textSize="16sp"
    android:textColor="@color/universal_black"
    android:gravity="center"
    android:layout_marginBottom="23dp"
    app:layout_constraintStart_toStartOf="@id/left_button_background"
    app:layout_constraintBottom_toBottomOf="@id/left_button_background"
    app:layout_constraintEnd_toEndOf="@id/left_button_background"

    />

<TextView
    android:id="@+id/bottom_button_settings"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/setting"
    android:textSize="16sp"
    android:textColor="@color/universal_text_black_20"
    android:gravity="center"
    android:layout_marginBottom="23dp"
    app:layout_constraintStart_toStartOf="@id/right_button_background"
    app:layout_constraintBottom_toBottomOf="@id/right_button_background"
    app:layout_constraintEnd_toEndOf="@id/right_button_background"/>

<ImageView
    android:id="@+id/bottom_icon_chats"
    android:layout_width="21dp"
    android:layout_height="21dp"
    android:foregroundGravity="center"
    app:layout_constraintStart_toStartOf="@id/bottom_button_chats"
    app:layout_constraintEnd_toEndOf="@id/bottom_button_chats"
    app:layout_constraintBottom_toTopOf="@id/bottom_button_chats"
    app:layout_constraintBottom_toBottomOf="@id/bottom_button_chats"

    app:srcCompat="@drawable/icon_chats" />

<ImageView
    android:id="@+id/bottom_icon_settings"
    android:layout_width="21dp"
    android:layout_height="21dp"
    app:srcCompat="@drawable/icon_settings_filled"
    app:layout_constraintStart_toStartOf="@id/bottom_button_settings"
    app:layout_constraintEnd_toEndOf="@id/bottom_button_settings"
    app:layout_constraintBottom_toTopOf="@id/bottom_button_settings"
    app:layout_constraintBottom_toBottomOf="@id/bottom_button_settings"/>

<ImageView
    android:id="@+id/bottom_chosen_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/bottom_button_active"
    app:layout_constraintStart_toStartOf="@id/right_button_background"
    app:layout_constraintTop_toTopOf="@id/right_button_background"
    app:layout_constraintWidth_percent="0.5"
    app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>

